--- a/project_01_hotel_website/about.html
+++ b/project_01_hotel_website/about.html
@@ -6,6 +6,7 @@
   <meta name="Description" content="Welcome to the most extraordinary hotel in Bangalore, India">
   <meta name="keywords" content="hotel,india hotel, bangalore hotel">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet"media ="screen and (max-width: 768px)" href="./css/mobile.css">
   <title>Hotel BT | About</title>
 </head>
 <body>
