--- a/project_01_hotel_website/index.html
+++ b/project_01_hotel_website/index.html
@@ -9,6 +9,7 @@
   href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
   integrity="sha384-gfdkjB5bdAXd+lj+gudLWI+BXq4IulW5IT+brZEZsLFm+aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet"media ="screen and (max-width: 768px)" href="./css/mobile.css">
   <title>Hotel BT | Welcome</title>
 </head>
 <body>
