--- a/project_07_Newsgrid_website/index.html
+++ b/project_07_Newsgrid_website/index.html
@@ -122,11 +122,65 @@
   </article>
     </div>
   </div>
-  
 </section>
 
+<!-- Footer-->
+
+<footer id="main-footer" class="py-2">
+  <div class="container footer-container">
+    <div>
+      <img src="./img/logo_light.png" alt="NewsGrid">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam maxime quos quo veniam voluptatum quas aliquam sapiente corrupti. Fuga, expedita!</p>
+    </div>
+    <div>
+      <h3>Email Newsletter</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+      <form>
+        <input type="email" placeholder="Enter Email...">
+        <input type="submit" placeholder="Subscribe" class="btn btn-primary">
+      </form>
+    </div>
+    <div>
+      <h3>Site Links</h3>
+      <ul class="list">
+        <li><a href="#">Help $ support</a></li>
+        <li><a href="#">Privacy policy</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <div>
+      <h2>Join Our Club</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, esse!</p>
+      <a href="#" class="btn btn-secondary">Join Now</a>
+    </div>
+    <div>
+    <p>
+      Copyright &copy; 2019, All Rights Reserved
+    </p>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
